--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
     "@angular/router": "~10.1.6",
     "@mdi/font": "^5.7.55",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.3",
     "compass-mixins": "^0.12.10",
+    "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
+    "jspdf": "^2.2.0",
     "ng2-charts": "^2.4.2",
     "node-sass": "^4.14.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.3",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
